force-app/main/default/objects/Case/fields/DataLimiteResolucao__c.field-meta.xml
<CustomField>
    <fullName>DataLimiteResolucao__c</fullName>
    <description>Fórmula baseada no Tempo de Resolução do SLA vinculado ao caso</description>
    <inlineHelpText>Data limite para resolução do caso conforme Tempo de Resolução padrão para criticidade selecionada</inlineHelpText>
    <label>Data Limite para Resolução</label>
    <type>DateTime</type>
</CustomField>