force-app/main/default/objects/Case/fields/Urgencia__c.field-meta.xml
<CustomField>
    <fullName>Urgencia__c</fullName>
    <description>Campo para registrar a criticidade (urgência) para a resolução do caso</description>
    <inlineHelpText>Selecione a criticidade para tratativa do caso</inlineHelpText>
    <label>Urgência</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Baixa</fullName>
                <default>true</default>
                <label>Baixa</label>
            </value>
            <value>
                <fullName>Média</fullName>
            </value>
            <value>
                <fullName>Alta</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>