force-app/main/default/objects/Case/recordTypes/SuporteAdministrativo.recordType-meta.xml
<RecordType>
    <fullName>SuporteAdministrativo</fullName>
    <active>true</active>
    <businessProcess>Suporte Administrativo</businessProcess>
    <description>Tipo de registro para casos referentes a dúvidas e solicitações administrativas</description>
    <label>Suporte Administrativo</label>
</RecordType>