force-app/main/default/objects/Case/recordTypes/SuporteTecnico.recordType-meta.xml
<RecordType>
    <fullName>SuporteTecnico</fullName>
    <active>true</active>
    <businessProcess>Suporte Técnico</businessProcess>
    <description>Tipo de registro para casos referentes a solicitações técnicas</description>
    <label>Suporte Técnico</label>
</RecordType>