force-app/main/default/objects/Case/validationRules/CasoImpedeAlterarUrgencia.validationRule-meta.xml
<ValidationRule>
    <fullName>CasoImpedeAlterarUrgencia</fullName>
    <active>true</active>
    <description>Impedir alterações no campo Urgência de um caso após 5 minutos de sua criação</description>
    <errorConditionFormula>AND(
  ISCHANGED(Urgencia__c),
  NOT($Permission.PodeAlterarUrgencia),
  OR(
    (NOW() - CreatedDate) &gt; (5/1440),
    $Profile.Name = &apos;Agente de Suporte&apos;
  )
)</errorConditionFormula>
    <errorMessage>Não é possível alterar a Urgência de um caso após 5 minutos de sua criação.</errorMessage>
</ValidationRule>